--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@storybook/vue": "^5.3.18",
     "axios": "^0.19.2",
+    "bootstrap-vue": "^2.13.1",
     "core-js": "^3.6.4",
+    "pug-plain-loader": "^1.0.0",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
@@ -35,8 +38,11 @@
     "eslint-plugin-vue": "^6.2.2",
     "prettier": "^2.0.5",
     "prettier-eslint": "^9.0.1",
+    "pug": "^2.0.4",
+    "pug-loader": "^2.4.0",
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
+    "vue-cli-plugin-pug": "~1.0.7",
     "vue-eslint-parser": "^7.0.0",
     "vue-template-compiler": "^2.6.11"
   },
