--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "core-js": "^3.6.4",
     "pug-plain-loader": "^1.0.0",
     "register-service-worker": "^1.7.1",
+    "sass": "^1.26.5",
+    "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vue-router": "^3.1.6",
@@ -40,9 +42,10 @@
     "prettier-eslint": "^9.0.1",
     "pug": "^2.0.4",
     "pug-loader": "^2.4.0",
-    "sass": "^1.26.3",
-    "sass-loader": "^8.0.2",
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.0",
     "vue-cli-plugin-pug": "~1.0.7",
+    "vue-cli-plugin-vuetify": "~2.0.5",
     "vue-eslint-parser": "^7.0.0",
     "vue-template-compiler": "^2.6.11"
   },
