--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "lint-css": "stylelint \"**/*.vue\" --fix"
   },
   "dependencies": {
     "@storybook/vue": "^5.3.18",
@@ -14,8 +15,6 @@
     "core-js": "^3.6.4",
     "pug-plain-loader": "^1.0.0",
     "register-service-worker": "^1.7.1",
-    "sass": "^1.26.5",
-    "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vue-router": "^3.1.6",
@@ -44,6 +43,8 @@
     "pug-loader": "^2.4.0",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
+    "stylelint": "^13.3.3",
+    "stylelint-config-standard": "^20.0.0",
     "vue-cli-plugin-pug": "~1.0.7",
     "vue-cli-plugin-vuetify": "~2.0.5",
     "vue-eslint-parser": "^7.0.0",
