--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint-css": "stylelint \"**/*.vue\" --fix"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/vue-fontawesome": "^0.1.9",
     "@storybook/vue": "^5.3.18",
     "axios": "^0.19.2",
     "bootstrap-vue": "^2.13.1",
