--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-axios": "^2.1.5",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3",
+    "vuex-router-sync": "^5.0.0",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
